# LightInkMsgPack

./: LICENSE  README.md
Example/src/: CompressEncrypt.cpp  Main.cpp  PackClass.cpp  PackType.cpp
Linux/: CMakeLists.txt
Linux/Example/: CMakeLists.txt
Linux/LightInkMsgPack/: CMakeLists.txt
include/Common/: CharPtrBridge.h  Config.h  LightInkVersion.h  Log.h  LogMsg.h  RuntimeError.h  SmallObject.h  Type.h  TypeList.h  TypeListDefine.h  TypeTool.h  UserMemory.h  WinSnprintf.h
include/Msgpack/: CapCompresser.h  DataBuffer.h  DataFixBuffer.cpp  DataFixBuffer.h  DataRefBuffer.h  DataSharedBuffer.h  PackBuffer.cpp  PackBuffer.h  PackDefine.h  PackTuple.h  Packer.cpp  Packer.h  PackerAdaptor.cpp  PackerAdaptor.h  Sysdep.h  Unpacker.cpp  Unpacker.h  UnpackerAdaptor.cpp  UnpackerAdaptor.h  XxteaEncrypter.h
include/Msgpack/encrypter/: CapCompresser.h  Crc32Encrypter.h  XxteaEncrypter.h
src/Common/: LightInkVersion.cpp  LogMsg.cpp  RuntimeError.cpp  SmallObject.cpp  WinSnprintf.c
src/Msgpack/: CapCompresser.cpp  DataBuffer.cpp  DataRefBuffer.cpp  XxteaEncrypter.cpp
src/Msgpack/encrypter/: CapCompresser.cpp  Crc32Encrypter.cpp  XxteaEncrypter.cpp
windows/: LightInkMsgPack.sln  clear.bat
windows/Example/: Example.vcxproj  Example.vcxproj.filters
windows/LightInkMsgPack/: LightInkMsgPack.vcxproj  LightInkMsgPack.vcxproj.filters
